--- a/server/components/moon/moon.liquid
+++ b/server/components/moon/moon.liquid
@@ -3,6 +3,6 @@
   <div class="cable"></div>
   <div class="moon">
     <img src="/public/images/images-responsiveness/moon.png">
-    <div class="test-gradient"></div>
+    <div class="moon-gradient"></div>
   </div>
-</div>
+</div>>
