--- a/server/components/stage-lights/stage-light.liquid
+++ b/server/components/stage-lights/stage-light.liquid
@@ -1,10 +1,34 @@
-<div id="rails" class="layer-1">
-    <div class="lights"> <img src="/public/images/spotlights/light-off.png" alt="spotlight on rails"> <div class="beam"></div> </div>
-    <div class="lights"> <img src="/public/images/spotlights/light-off.png" alt="spotlight on rails"> <div class="beam"></div> </div>
-    <div class="lights"> <img src="/public/images/spotlights/light-off.png" alt="spotlight on rails"> <div class="beam"></div> </div>
-    <div class="lights"> <img src="/public/images/spotlights/light-off.png" alt="spotlight on rails"> <div class="beam"></div></div>
-    <div class="lights"> <img src="/public/images/spotlights/light-off.png" alt="spotlight on rails"> <div class="beam"></div> </div>
-    <div class="lights"> <img src="/public/images/spotlights/light-off.png" alt="spotlight on rails"> <div class="beam"></div> </div>
-    <div class="lights"> <img src="/public/images/spotlights/light-off.png" alt="spotlight on rails"> <div class="beam"></div> </div>
-    <div class="lights"> <img src="/public/images/spotlights/light-off.png" alt="spotlight on rails"> <div class="beam"></div> </div>
+<div id="rails" class="layer-2">
+  <div class="lights">
+    <img src="/public/images/spotlights/light-off.png" alt="spotlight on rails">
+    <div class="beam"></div>
+  </div>
+  <div class="lights">
+    <img src="/public/images/spotlights/light-off.png" alt="spotlight on rails">
+    <div class="beam"></div>
+  </div>
+  <div class="lights">
+    <img src="/public/images/spotlights/light-off.png" alt="spotlight on rails">
+    <div class="beam"></div>
+  </div>
+  <div class="lights">
+    <img src="/public/images/spotlights/light-off.png" alt="spotlight on rails">
+    <div class="beam"></div>
+  </div>
+  <div class="lights">
+    <img src="/public/images/spotlights/light-off.png" alt="spotlight on rails">
+    <div class="beam"></div>
+  </div>
+  <div class="lights">
+    <img src="/public/images/spotlights/light-off.png" alt="spotlight on rails">
+    <div class="beam"></div>
+  </div>
+  <div class="lights">
+    <img src="/public/images/spotlights/light-off.png" alt="spotlight on rails">
+    <div class="beam"></div>
+  </div>
+  <div class="lights">
+    <img src="/public/images/spotlights/light-off.png" alt="spotlight on rails">
+    <div class="beam"></div>
+  </div>
 </div>
