draggable false added to homepage elements

--- a/server/components/cannon/cannon.liquid
+++ b/server/components/cannon/cannon.liquid
@@ -1,6 +1,6 @@
 <div class="cannon-container layer-1">
-  <img class="cannon-shadow" src="/public/images/images-responsiveness/cannon-shadow.webp" alt="">
-  <img class="cannon" src="/public/images/images-responsiveness/cannon.webp" alt="">
+  <img class="cannon-shadow" src="/public/images/images-responsiveness/cannon-shadow.webp" draggable="false" alt="schaduw onder het kanon">
+  <img class="cannon" src="/public/images/images-responsiveness/cannon.webp" draggable="false" alt="Kanon prop">
 
   <audio id="cannon-explosion" src="/public/audio/cannon-fire.wav"></audio>
   <audio id="cannon-yell" src="/public/audio/Wilhelm-Scream.mp3"></audio>
