--- a/server/views/index.liquid
+++ b/server/views/index.liquid
@@ -35,11 +35,11 @@
     </a>
 
     <div class="audience layer-3">
-      <img src="/public/images/images-responsiveness/audience.webp">
+      <img src="/public/images/images-responsiveness/audience.webp" draggable="false">
     </div>
 
-    <img class="bottom-left layer-2" src="/public/images/images-responsiveness/frame-bottom-left.webp">
-    <img class="top-left layer-2" src="/public/images/images-responsiveness/frame-top-left.webp">
+    <img class="bottom-left layer-2" src="/public/images/images-responsiveness/frame-bottom-left.webp" draggable="false">
+    <img class="top-left layer-2" src="/public/images/images-responsiveness/frame-top-left.webp" draggable="false">
     <div class="repeating-wall-left layer-2"></div>
 
     <div class="repeating-cage layer-2"></div>
@@ -48,8 +48,8 @@
     <div class="repeating-floor layer-2"></div>
 
     <a href="/projects" class="prop-container layer-1">
-      <img class="prop-shadows" src="/public/images/images-responsiveness/prop-shadows.webp">
-      <img class="props" src="/public/images/images-responsiveness/props.webp">
+      <img class="prop-shadows" src="/public/images/images-responsiveness/prop-shadows.webp" draggable="false">
+      <img class="props" src="/public/images/images-responsiveness/props.webp" draggable="false">
       <h2 href="#" class="nav-text">Bekijk<span class="break"></span>Projecten</h2>
       <span class="pulse delayed"></span>
     </a>
@@ -62,11 +62,11 @@
 
     <div class="repeating-wall-right layer-2"></div>
     <img class="bottom-right layer-2" src="/public/images/images-responsiveness/frame-bottom-right.webp">
-    <img class="top-right layer-2" src="/public/images/images-responsiveness/frame-top-right.webp">
+    <img class="top-right layer-2" src="/public/images/images-responsiveness/frame-top-right.webp" draggable="false">
 
     <div class="repeating-wall-right layer-2"></div>
     <img class="bottom-right layer-2" src="/public/images/images-responsiveness/frame-bottom-right.webp">
-    <img class="top-right layer-2" src="/public/images/images-responsiveness/frame-top-right.webp">
+    <img class="top-right layer-2" src="/public/images/images-responsiveness/frame-top-right.webp" draggable="false">
   </div>
 
   {% render '../components/hammer-cursor/hammer-cursor.liquid' %}
