--- a/server/views/index.css
+++ b/server/views/index.css
@@ -273,6 +273,9 @@
     translate: -50%;
 }
 
+/* .frame .prop-container .props {
+    niks
+} */
 
 .frame .prop-container .props:hover,
 .frame .prop-container .props:focus-visible {
