deleted shiny spotlight + draggable=false

--- a/server/components/stage-lights/stage-light.liquid
+++ b/server/components/stage-lights/stage-light.liquid
@@ -1,34 +1,34 @@
 <div id="rails" class="layer-2">
   <div class="lights">
-    <img src="/public/images/spotlights/light-off.png" alt="spotlight on rails">
+    <img src="/public/images/spotlights/licht.png" alt="spotlight on rails" draggable="false">
     <div class="beam"></div>
   </div>
   <div class="lights">
-    <img src="/public/images/spotlights/light-off.png" alt="spotlight on rails">
+    <img src="/public/images/spotlights/licht.png" alt="spotlight on rails" draggable="false">
     <div class="beam"></div>
   </div>
   <div class="lights">
-    <img src="/public/images/spotlights/light-off.png" alt="spotlight on rails">
+    <img src="/public/images/spotlights/licht.png" alt="spotlight on rails" draggable="false">
     <div class="beam"></div>
   </div>
   <div class="lights">
-    <img src="/public/images/spotlights/light-off.png" alt="spotlight on rails">
+    <img src="/public/images/spotlights/licht.png" alt="spotlight on rails" draggable="false">
     <div class="beam"></div>
   </div>
   <div class="lights">
-    <img src="/public/images/spotlights/light-off.png" alt="spotlight on rails">
+    <img src="/public/images/spotlights/licht.png" alt="spotlight on rails" draggable="false">
     <div class="beam"></div>
   </div>
   <div class="lights">
-    <img src="/public/images/spotlights/light-off.png" alt="spotlight on rails">
+    <img src="/public/images/spotlights/licht.png" alt="spotlight on rails" draggable="false">
     <div class="beam"></div>
   </div>
   <div class="lights">
-    <img src="/public/images/spotlights/light-off.png" alt="spotlight on rails">
+    <img src="/public/images/spotlights/licht.png" alt="spotlight on rails" draggable="false">
     <div class="beam"></div>
   </div>
   <div class="lights">
-    <img src="/public/images/spotlights/light-off.png" alt="spotlight on rails">
+    <img src="/public/images/spotlights/licht.png" alt="spotlight on rails" draggable="false">
     <div class="beam"></div>
   </div>
 </div>
