--- a/server/views/about/about.liquid
+++ b/server/views/about/about.liquid
@@ -83,5 +83,7 @@
 </div>
 
 {% render '../../components/curtains/curtains.liquid'  %}
+{% render '../../components/hammer-cursor/hammer-cursor.liquid' %}
+
 
 {% endblock %}
