--- a/server/layouts/base.liquid
+++ b/server/layouts/base.liquid
@@ -9,7 +9,7 @@
   {% endblock %}
 
   <title>De Man met de Hamer</title>
-  <link rel="icon" type="image/x-icon" href="./public/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./public/images/favicon.svg">
   <link rel="stylesheet" href="/index.css">
   <script type="module" src="/index.js" defer></script>
   {% block styles %}{% endblock %}
